Modifcaciones a varios puntos de mejora debido al reporte generado por FindBugs. Validaciones contra null no necesarias, variables no utilizadas, sustitución de métodos utilizados que mejoran el tiempo de ejecución, entre otros.